--- a/HotelBlueMoon/WebContent/css/style.css
+++ b/HotelBlueMoon/WebContent/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-color: #FFF;
+	background-image: url("../image/bg02.jpg");
 	display: flex;
 	min-height: 100vh;
 	flex-direction: row;
