--- a/HotelBlueMoon/WebContent/css/style.css
+++ b/HotelBlueMoon/WebContent/css/style.css
@@ -10,12 +10,10 @@ body {
 	min-height: 100vh;
 	flex-direction: row;
 	margin: 0;
-    padding: 40px;
+	padding: 40px;
 }
 
-
 .hotelcol-1 {
-	
 	flex: 1;
 }
 
@@ -36,7 +34,6 @@ body {
 }
 
 header, footer {
-	
 	height: 20vh;
 }
 
@@ -44,16 +41,15 @@ footer, article, nav {
 	padding: 1em;
 }
 
-
-
-.mainSpan .card{
-	background-color:white;
-	float:left;
-	width:200px;
-	height:400px;
-	border:1px solid white;
-	border-radius:5px;
-
+.mainSpan .card {
+	background-color: #4E5D6C;
+	float: left;
+	width: 22rem;
+	height: 400px;
+	border-radius: 5px;
 	margin: 10px;
-	
+}
+
+article {
+	background-color: #2B3E50;
 }
