--- a/HotelBlueMoon/WebContent/css/assets/mobirise/css/mbr-additional.css
+++ b/HotelBlueMoon/WebContent/css/assets/mobirise/css/mbr-additional.css
@@ -5,7 +5,6 @@
 	;
 
 body {
-	font-family: Roboto;
 	font-style: normal;
 	line-height: 1.5;
 }
@@ -1175,17 +1174,16 @@ body {
 	border: none;
 	position: absolute;
 	background: transparent;
-	z-index: 1;
-	left: -90px;
+	z-index: 2;
 	top: 25%;
 	height: 50%;
-	width: calc(100% + 90px);
 	color: transparent;
 	user-select: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	-o-user-select: none;
+	width: 100px;
 }
 
 .cid-qJ2VZmtvSe .booking-datepicker .mbr-form .input-wrap input.guests-input
